--- a/css/main.css
+++ b/css/main.css
@@ -35,6 +35,12 @@ div {
 
   background-color: limegreen;
   opacity: 0;
+  transition: all .5s ease;
+}
+
+.show {
+  opacity: 1;
+
 }
 
 .diamond {
