--- a/css/main.css
+++ b/css/main.css
@@ -72,7 +72,7 @@ div {
 }
 
 .collapse {
-
+  max-height: 0;
 }
 
 .panel h2 {
@@ -90,7 +90,29 @@ div {
 }
 
 .bounce {
+    animation: bounce .5s linear forwards;
+}
 
+@keyframes bounce {
+  0% {
+    transform: translate(0,0);
+  }
+
+  25% {
+    transform: translate(-25px,-20px);
+  }
+
+  50% {
+    transform: translate(-50px,20px);
+  }
+
+  75% {
+    transform: translate(-75px,-20px);
+  }
+
+  100% {
+    transform: translate(-100px,0);
+  }
 }
 
 .list {
@@ -108,7 +130,7 @@ div {
 }
 
 .append {
-  
+
 }
 
 .list li {
